some style changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="background">
         <div class="navbar">
             <div class="nav-left">
-                <p id="logo" ><img id="imgLogo" src="WESMOLogo1.png"></p>
+                <p id="logo" ><img id="imgLogo" src="WESMOLogo.png"></p>
                 <a href="http://wesmo.co.nz:3000/d/b650f98e-4928-4a23-adf2-079c04161405/bms?orgId=1&refresh=1s">BMS</a>
                 <a href="http://wesmo.co.nz:3000/d/c0e07de0-8a8c-4cb4-8763-9ec002a0e1bf/vcu?orgId=1&refresh=1s">VCU</a>
             </div>
@@ -30,7 +30,7 @@
         <div id="mainTitle">
             <div id="year">2023</div>
             <h1>Our Last Year With An Internal Combustion Engine</h1>
-            <div id="subTitle">BEFORE WE GO ELECTRIC.</div>    
+            <div id="subTitle">BEFORE WE GO ELECTRIC</div>    
         </div>
     </div>
 </body>
