added in typewriter

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>WESMO | Waikato Engineering Students Motorsport Organisation</title>
     <link rel="stylesheet" href="style.css"> 
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="background">
@@ -22,16 +23,19 @@
                 <p id="logo" ><img id="imgLogo" src="WESMOLogo.png"></p>
                 <a href="http://wesmo.co.nz:3000/d/b650f98e-4928-4a23-adf2-079c04161405/bms?orgId=1&refresh=1s">BMS</a>
                 <a href="http://wesmo.co.nz:3000/d/c0e07de0-8a8c-4cb4-8763-9ec002a0e1bf/vcu?orgId=1&refresh=1s">VCU</a>
+                <a href="#">Sponsors</a>
             </div>
             <div class="nav-right">
-                <a href="https://youtu.be/xvFZjo5PgG0">Engineering Team</a>
+                <a id="rightButtonNav" href="https://youtu.be/xvFZjo5PgG0">Engineering Team</a>
             </div>
         </div>
         <div id="mainTitle">
             <div id="year">2023</div>
-            <h1>Our Last Year With An Internal Combustion Engine</h1>
-            <div id="subTitle">BEFORE WE GO ELECTRIC</div>    
+            <h1 class="text-3xl font-bold underline">Support Your Local 
+                <div id="typewriter"> </div> With WESMO</h1>
+            <div href="#" id="subTitle">FIND OUT MORE </div>    
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
