--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="nav-right">
-                <a id="rightButtonNav" href="https://youtu.be/xvFZjo5PgG0">Engineering Team</a>
+                <a id="rightButtonNav" href="#">Engineering Team</a>
                 <div class="nav-right">
                     <div class="hamburger-menu">
                         <div class="line"></div>
@@ -42,7 +42,9 @@
             <div id="year">2023</div>
             <h1 class="text-3xl font-bold underline">Support Your Local 
                 <div id="typewriter"> </div> With WESMO</h1>
-            <div href="#" id="subTitle">FIND OUT MORE </div>    
+                <a href="https://youtu.be/xvFZjo5PgG0">            
+                    <div href="#" id="subTitle">FIND OUT MORE </div>    
+                </a>
         </div>
     </div>
     <script src="script.js"></script>
